# wasmledger

./: .gitignore  Cargo.toml  README.md  config.yaml.example
.claude/: settings.local.json
crates/actors/core/: Cargo.toml
crates/actors/core/src/: migrations.rs
crates/capability-sql/: Cargo.toml
crates/capability-sql-client/: Cargo.toml  expand.rs
crates/capability-sql-client/src/: base.rs
crates/capability-sql-client/src/base/: column.rs  decode.rs  iter.rs  row.rs
crates/capability-sql/src/: sqldb.rs
crates/capability-sql/src/core/bindings/: connection.rs  pool.rs  query_results.rs  transaction.rs
crates/capability-sql/src/postgres/: bindings.rs
crates/capability-sql/src/postgres/bindings/: codecs.rs  utils.rs
crates/component-core/: Cargo.toml
crates/component-core/src/: lib.rs
crates/component-core/wit/: core.wit
crates/core/: Cargo.toml  expand.rs
crates/core/src/: lib.rs  migrations.rs
crates/core/src/migrations/: 001_base.sql
crates/core/wit/: core.wit
crates/host/: Cargo.toml  config.yaml  expand.rs
crates/host/src/: api.rs  app_state.rs  capabilities.rs  config.rs  engine.rs  execution.rs  main.rs  plugin.rs  plugin_registry.rs
crates/host/src/actor/: client.rs  registry.rs
crates/host/src/actor/client/: migrator.rs
crates/host/src/api/: execute.rs
crates/host/src/capabilities/: postgres.rs  sql.rs  wasi.rs
crates/host/src/component/: client.rs  registry.rs
crates/host/src/component/client/: component.rs  migrator.rs
crates/host/src/execution/: error.rs  executor.rs
crates/host/src/plugin/: client.rs  migrations.rs  registry.rs
crates/host/src/plugin/client/: migrations.rs
crates/host/src/plugin_registry/: config.rs  plugin.rs  registry.rs
crates/host/wit/: actor.wit  component.wit  plugin.wit
crates/lib-money/: Cargo.toml
crates/lib-money/src/: lib.rs
crates/migrations-macro/: Cargo.toml
crates/migrations-macro/src/: lib.rs
crates/money/: Cargo.toml
crates/sql/: Cargo.toml  expand.rs
crates/sql-client/: Cargo.toml
crates/sql-client/src/: lib.rs  postgres.rs
crates/sql-client/src/base/: derive.rs
crates/sql-client/wit/base/: base.wit
crates/sql-client/wit/postgres/: postgres.wit
crates/sql/src/: client.rs  lib.rs  sqldb.rs
crates/sql/src/core/: bindings.rs
crates/sql/src/core/bindings/: connection.rs  error.rs  executor.rs  pool.rs  query.rs  query_results.rs  sql_arguments.rs  transaction.rs
crates/sql/src/postgres/: bindings.rs
crates/sql/src/postgres/bindings/: codecs.rs  codecs_ext.rs  utils.rs
crates/sql/wit/: component.wit  host.wit
crates/sql/wit/codecs-postgres/: codecs-postgres.wit
crates/tx/: Cargo.toml
crates/tx/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  migrations.rs
examples/: execute_function.sh
wasmledger-money/src/: lib.rs  money_core.rs
wasmledger-sql/: Cargo.toml  expanded.rs
wasmledger-sql/src/: lib.rs
wasmledger-sql/src/core/: bindings.rs
wasmledger-sql/src/core/bindings/: context.rs  error.rs  query_results.rs
wasmledger-sql/src/postgres/: bindings.rs
wasmledger-sql/src/postgres/bindings/: codecs.rs
wasmledger-tx/src/: lib.rs  tx_core.rs
wit/actor/: actor.wit  migrator.wit
wit/component/: component.wit  migrator.wit
wit/module/: migrations.wit  module.wit
wit/money/: money.wit  types.wit
wit/plugin/: migrations.wit
wit/sql/: codecs.wit  executors.wit  query.wit  types.wit  world.wit
wit/sql/postgres/: codecs-ext.wit  codecs.wit  world.wit
wit/tx/: tx.wit  types.wit
