[workspace]
resolver = "3"
members = [
  "crates/tx",
  "crates/money",
  "crates/sql",
  "crates/sql-client",
  "crates/core",
  "crates/migrations-macro",
  "crates/utils",
  "crates/host"
]

[workspace.dependencies]
wit-bindgen = "0.50.0"
wasmledger-sql = { path = "crates/sql" }
wasmledger-sql-client = { path = "crates/sql-client" }
wasmledger-utils = { path = "crates/utils" }
wasmledger-migrations-macro = { path = "crates/migrations-macro" }
