[package]
name = "wasmledger-host"
version = "0.1.0"
edition = "2024"

[dependencies]
wasmledger-sql = { workspace = true, features = ["postgres"] }
wit-bindgen = { workspace = true }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
axum = { version = "0.8.8", features = ["multipart"] }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
anyhow = "1.0.100"
bytes = "1.5"
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tracing = "0.1"
